k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app
  namespace: gitops-app
  labels:
    app: gitops-app
spec:
  type: ClusterIP
  selector:
    app: gitops-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
